Changes to be committed:  	modified:   collapse.js 	renamed:    "\344\270\273\351\241\265.html" -> index.html 	modified:   styles.css 	new file:   "\351\243\236\350\267\203\350\256\241\345\210\222\344\270\273\351\241\265.html"

--- a/index.html
+++ b/index.html
@@ -219,8 +219,17 @@
 
       </div>  
 
-
-
+      <div class="input-group">  
+        <label for="code-input">Enter code:</label>  
+        <input type="text" id="code-input" placeholder="Enter the code">  
+        <button onclick="verifyCode()">Submit</button>  
+      </div>  
+  
+      <div id="link-container">  
+          <p>欢迎来到，飞跃计划:</p>  
+          <a href="./飞跃计划主页.html" target="_blank">进入主页</a>  
+      </div>  
+      
 
       <p>
       </p>
@@ -238,19 +247,9 @@
       justify-content: space-around; /* 使链接块在footer中均匀分布 */  
       align-items: center; /* 垂直居中链接块中的内容 */  
       ">  
-      <a href="./组长个人网页/主页.html" style="color: #666; text-decoration: none;">  
+      <a href="http://www.chem.bnu.edu.cn/" style="color: #666; text-decoration: none;">  
           <div style="padding: 5px; border: 1px solid #ccc; border-radius: 5px;">  
-              个人网页  
-          </div>  
-      </a>  
-      <a href="page2.html" style="color: #666; text-decoration: none;">  
-          <div style="padding: 5px; border: 1px solid #ccc; border-radius: 5px;">  
-              网页2  
-          </div>  
-      </a>  
-      <a href="page3.html" style="color: #666; text-decoration: none;">  
-          <div style="padding: 5px; border: 1px solid #ccc; border-radius: 5px;">  
-              网页3  
+              BNU化学学院  
           </div>  
       </a>  
     </footer>
