modified:   index.html

--- a/index.html
+++ b/index.html
@@ -44,15 +44,14 @@
         line-height: 1.7;
         text-size-adjust: 100%;
       ">
-      <p>  
-        2024年10月1日。网站主页版本 <span class="version">V0.0.1</span>  
-      </p>
-      <p>
-        大家好，这里是BNU化学学院<author>飞跃计划小组</author>组长——好吧现在只有我一个人......不过没关系，千里之行始于足下，合抱之木生于毫末。
+      <p style="text-align: center;">
+        欢迎来到，飞跃计划！
       </p>
 
       <hr>
-
+      <p>
+        事不宜迟，我们接下来开始解释为什么要进行飞跃计划。
+      </p>
       <p>
       奇怪的是，我们在介绍飞跃计划的内容之前，第一部分是为什么进行飞跃计划，在讨论一个计划的必要性之前不进行计划概述，这是否太逆天了？后来我想想还真是，因此在后文解释飞跃计划是什么之前，这里就一句话带过飞跃计划的内容：一定要赶上和超过世界先进水平。
       </p>
@@ -228,9 +227,9 @@
       </div>    
         
       <div id="link-container" style="display: none;">    
-        <p>欢迎来到，飞跃计划:</p>    
+        <p style="text-align: center;">欢迎来到，飞跃计划:</p>    
         <!--  好吧，我就知道肯定会有人F12审查代码查看隐藏链接，不过本身主页里也没啥特殊的 -->
-        <a href="./飞跃计划主页.html" target="_blank">进入主页</a>    
+        <p style="text-align: center;">  <a href="./飞跃计划主页.html" target="_blank">进入主页</a>   </p>   
       </div>
       
 
