Changes to be committed: modified:   index.html

--- a/index.html
+++ b/index.html
@@ -49,11 +49,28 @@
       </p>
 
       <hr>
+
       <p>
-        事不宜迟，我们接下来开始解释为什么要进行飞跃计划。
+        飞跃计划，现在是依托于团委学业辅导室的新本科生科研宣传计划。但是后续，我们有志于从本科生科研宣传计划，办成成体系的本科生科研培养制度。
+      </p>
+
+      <p>
+        飞跃计划，是一项基于朋辈辅助培养，结合各课题导师及研究生的配合，学院政策的配合下的新科研培养计划。总的来说，就是最大化利用学校特色，尝试从新的道路出发，办成比肩国内超一流学校的本科生科研培养制度的计划。
+      </p>
+
+      <p>
+        当然了，有的同学肯定会问，你这说的都是什么玩意啊？什么朋辈辅助培养、科研计划、学校特色、新的道路，都是说的什么玩意？
+      </p>
+
+      <p>
+        这里，我们简单解释一下。飞跃计划的目标是，建成同年级之间的科研交流小组；建成跨年级的学业、科研及生活辅导小组；结合各课题组的科研介绍，引导学生做好本科生科研；沟通学院相关培养制度与政策，提高学生培养质量；办成不同于南大科大院大的新本科生科研培养制度的计划。
+      </p>
+
+      <p>
+        我们接下来开始解释为什么要进行飞跃计划。
       </p>
       <p>
-      奇怪的是，我们在介绍飞跃计划的内容之前，第一部分是为什么进行飞跃计划，在讨论一个计划的必要性之前不进行计划概述，这是否太逆天了？后来我想想还真是，因此在后文解释飞跃计划是什么之前，这里就一句话带过飞跃计划的内容：一定要赶上和超过世界先进水平。
+      一定要赶上和超过世界先进水平。
       </p>
 
       <button class="center-button" onclick="toggleCollapse('为什么进行飞跃计划')">为什么进行飞跃计划</button> 
@@ -67,15 +84,15 @@
         </p>
   
         <p>
-          可我们换个角度，大一上学期就适应生活并找到课题组，这是可能的吗——大众意义的可能吗？其实恐怕有点不现实，仅有极少数的同学，例如高中就是银牌金牌选手，上了大学半个学期就能找到课题组，这确实很常见。但对于正常的学生，尤其在BNU，九成五的学生其实高中都没有怎么接触过大学化学，让他们一个学期内就找到自己想要的方向，这不大现实，因为他们往往还啥都不会。时间不会停下脚步，竞争只会越来越烈。
+          可我们换个角度，大一上学期就适应生活并找到课题组，这是可能的吗——大众意义的可能吗？其实恐怕有点不现实，仅有极少数的同学，例如高中就是银牌金牌选手，上了大学半个学期就能找到课题组，这确实很常见。但对于正常的学生，九成五的学生其实高中都没有怎么接触过大学化学，一个学期内就找到自己想要的方向，这不大现实。但是，时间不会停下脚步，竞争只会越来越烈。
         </p>
   
         <p>
-          毋庸置疑的是，我们并不像院大一样有那么多的教授课题组资源，这意味着我们不主动，教授们没理由主动联系我们(当然了实际上院大也不可能是教授push本科生干活)；我们并不像科大复旦南大一样有那么多银牌金牌的学生，可以举办对应课程的免修考试，通过的学生可以考虑节省时间早日进组干活；更不用提我们并不像清北一样了——又有大牛又有集训队+金牌选手。
+          毋庸置疑的是，我们并不像院大一样有那么多的教授课题组资源，这意味着我们不主动，教授们没理由主动联系我们(当然了实际上院大也不可能是教授push本科生干活)；我们并不像科大复旦南大一样有那么多银牌金牌的学生，可以举办对应课程的免修考试，通过免修的学生可以考虑节省时间早日进组干活；更不用提我们并不像清北一样了——又有大牛又有集训队+金牌选手。
         </p>
   
         <p>
-          在这个内卷及资源有限的背景下，我们BNU-Chem该如何发展呢？因此，我们提出飞跃计划——计划名字甚至都是搬得各学校出国计划手册——但是我们仍然决定使用这个名字(好吧其实组里只有我一个人)，理由如下。
+          在这个内卷及资源有限的背景下，我们BNU-Chem该如何发展呢？因此，我们提出结合学校特色，开展飞跃计划。
         </p>
       </div>  
 
@@ -88,8 +105,14 @@
       <button class="center-button" onclick="toggleCollapse('为什么叫飞跃计划')">为什么叫飞跃计划</button> 
       <div class="collapse-container collapsed" id="为什么叫飞跃计划">  
         <p>
-          首先我们计划本身是提倡到海外名校深造的，并且我们甚至可以说是刚需一半的励耘班的同学出国，因为这会带来一半保研一半出国，实现全员深造升学，因此我们计划是必须有很大的出国组成部分的，否则保研率有限，到最后班内打架抢名额就不好了。第二，飞跃其实很符合当下BNU-Chem的发展事实，毋庸置疑的是，比不过清北复科南、以及天大吉大南开厦大等化学强校，从规模上比不上，从化学校友圈上，除了教育口赢完了，其他方向都不占优势。第三，飞跃这一行为本身，我们动用想象力一下，什么是飞跃的画面。我个人认为飞跃的第一种画面是“鸟为什么会飞”，也就是如果我们无法在时代的陨洪流淹没大地之前高高飞起，我们便无法继续过往的生活；这句话就是说，如果我们没有足够的本事飞翔，我们便会因缺乏自然基金、或者说做不出成果，通过不了非升级走的考核而退出学术界。第二种画面是“探险队接二连三飞跃悬崖”，这里先抵达彼岸的成员会接引后面的成员；也就是说，本身这一前人引领后人的行为，较为契合师范的本质，也契合科研的传承行为。
+          第一，我们计划本身是提倡到海外名校深造的，并且我们甚至可以说是刚需一半的励耘班的同学出国，因为这会带来一半保研一半出国，实现全员深造升学，因此我们计划是必须有很大的出国组成部分的，否则保研率有限，到最后班内打架抢名额就不好了。而恰好，在出国信息交流分享这个主题上，在其他很多学校，民间的叫法就是飞跃手册。
         </p>  
+        <p>
+          第二，飞跃其实很符合当下BNU-Chem的发展事实，毋庸置疑的是，比不过清北复科南、以及天大吉大南开厦大等化学强校，从规模上比不上，从化学校友圈上，除了教育口赢完了，其他方向都不占太大优势。
+        </p> 
+        <p>
+          第三，飞跃这一行为本身，我们动用想象力一下，什么是飞跃的画面。我个人认为飞跃的第一种画面是“鸟为什么会飞”，也就是如果我们无法在时代的洪流席卷大地之前高高飞起，我们便无法继续过往的生活；这句话就是说，如果我们没有足够的本事飞翔，我们便会因缺乏自然基金、或者说做不出成果，通过不了非升级走的考核而退出学术界。第二种画面是“探险队接二连三飞跃悬崖”，这里先抵达彼岸的成员会接引后面的成员；也就是说，本身这一前人引领后人的行为，较为契合师范的本质，也契合科研的传承行为。
+        </p> 
       </div>  
 
       <hr>
@@ -101,7 +124,7 @@
         </p>
 
         <p>
-          对于第一个目标，实现海外名校的深造率提高，学院的国际交流政策与资助十分重要；各课题组的培养，也是直接决定学生的offer竞争力的；而学生本身能投入多少，能献祭多少，也尤为关键。
+          对于第一个目标，实现海外名校的深造率提高，学院的国际交流政策与资助十分重要；各课题组的培养，也是直接决定学生的offer竞争力的；而学生本身能投入多少，能献祭多少，就是说，有没有足够的投入使得自己能有足够的产出实现高竞争力，以及出国深造的意愿，也尤为关键。
         </p>
 
         <p>
@@ -109,7 +132,7 @@
         </p>
 
         <p>
-          对于第三个目标，建立危机意识，这需要学院和课题组的Push，当然了一般学院和课题组教授们不会对本科生Push，并且本科生也有学业压力，因此这部分危机意识的建立，也就是意识到真正的竞争形势，恐怕担子落到了互帮互助的圈子信息分享，是以学生工作为主的。从互帮互助的培养与交流制度上，比如交流学业绩点刷分，参加各种项目刷加分，或者是早日准备出国的策略，这部分也是学生工作为主。
+          对于第三个目标，建立危机意识，这需要学院和课题组的Push，当然了一般学院和课题组教授们不会对本科生Push，并且本科生也有学业压力，因此这部分危机意识的建立，也就是意识到真正的竞争形势，恐怕担子落到了互帮互助的圈子信息分享。从互帮互助的培养与交流制度上，比如交流学业绩点刷分，参加各种项目刷加分，或者是早日准备出国的策略，这部分也是朋辈辅导为主。
         </p>
       </div>  
 
@@ -131,15 +154,15 @@
         <button class="center-button" onclick="toggleCollapse('第一步宣传阶段')">第一步宣传阶段</button> 
         <div class="collapse-container collapsed" id="第一步宣传阶段">  
           <p>
-            第一阶段，针对新生入学的大一秋季学期阶段，该阶段是我们飞跃计划起步的关键节点。在这个阶段，我们联系各个课题组并在学院的支持下，举行每周一场两小时合四节的科研讲座。该科研讲座以通俗的语言，兴趣为导向支持新生了解各课题组的工作，从而为选择课题组打下知识基础。
+            第一阶段，针对新生入学的大一秋季学期阶段。在这个阶段，我们联系各个课题组并在学院的支持下，举行每周一场两小时合四节的科研讲座。这个讲座，每节半小时，每节一个方向。该科研讲座以通俗的语言，兴趣为导向支持新生了解各课题组的工作，从而为选择课题组打下知识基础。
           </p>
           
           <p>
-            除开宣传的知识引导工作，我们要做好执行引导工作。
+            除开宣传的知识引导工作，我们要做好执行引导工作，我们会定期收集各位同学的意愿及疑问，开展交流会谈，联系并推荐相应的课题组资源。
           </p>
 
           <p>
-            首先，我们通过上述的科研讲座，布置对应的考核任务，考核的形式为每一场的四节不同方向的讲座任选一，写总结、感想、提问。这种考核的优点在于，学生只需要选择其中最感兴趣的方向完成任务即可，有一定程度的自由，最感兴趣的方向所带来的总结感想与提问，质量毫无疑问是更高的，当然了还有一种情况就是学生哪个方向都不喜欢，那这恐怕就不太好办了。该考核任务同时作为记录，次年提供给本基带队教师，供双向选择参考。
+            上述的科研讲座，布置对应的考核任务，考核的形式为每一场的四节不同方向的讲座任选一，写总结、感想、提问。这种考核的优点在于，只需要选择其中最感兴趣的方向完成任务即可，有一定程度的自由，最感兴趣的方向所带来的总结感想与提问，质量毫无疑问是更高的，当然了还有一种情况就是哪个方向都不喜欢，那这恐怕就不太好办了。该考核任务同时作为记录，次年提供给本基带队教师，供双向选择参考。
           </p>
 
         </div>  
@@ -158,16 +181,16 @@
         <button class="center-button" onclick="toggleCollapse('第三步独立阶段')">第三步独立阶段</button> 
         <div class="collapse-container collapsed" id="第三步独立阶段">  
           <p>
-            第二阶段，针对新生的大二秋季春季学期。该阶段是我们飞跃计划产出的关键节点。在这个阶段，我们第一份工作着手于进一步提升科研团体凝聚力，更进一步提升科研投入。然而除了这一份工作外，我们考虑第二份工作，也是更为“疯狂”的工作，我们考虑让学生直接承担课题的主要任务，以第一完成人的身份推进课题，走完实验设计、实验执行、数据处理、论文写作、论文修改等全过程。
+            第三阶段，针对新生的大二秋季春季学期。在这个阶段，更进一步提升本科生的科研投入。我们考虑让学生直接承担课题的主要任务，以第一完成人的身份推进课题，走完实验设计、实验执行、数据处理、论文写作、论文修改等全过程。
           </p>
           <p>
-            这部分工作的主要难点在于，可以预计的是有相当多的本科生，即使走完了上述的第一第二部分的工作，但仍然恐怕还欠缺一些能力，同时课题组也并不一定有足够的信心或刚好有对应的课题资源，分给本科生去做。但是这部分的工作是有必要的，因为无论是国内的深造升学，还是国外的PhD申请上，一作的文章可以说当下都是刚需的，拿不出来恐怕就丢了一大半的竞争力。
+            当然这个其实有一定的难度，尽管，让本科生在课题组直接承担第一作者任务，这是院长认为较为重要的(哪怕是三区四区期刊)，但是从我们开展工作的角度，真不简单。因为课题组需要能给到本科生小课题，导师需要直接带本科生，如果说学生的能力稍微欠缺点，那么这带起来就会麻烦点了。但是我们有理由相信，通过飞跃计划，第一阶段第二阶段的开展，到大二的时候各位是能够胜任这个角色的。同时一作确实是，很有必要的，因为无论是国内的深造升学，还是国外的PhD申请上，一作的文章可以说当下都是刚需的，拿不出来恐怕就丢了一大半的竞争力。
           </p>
           <p>
-            当然了时代特征就是如此，并且未来只会卷的越来越厉害，因此应对之策唯有打不过就加入。我们认为飞跃计划的产出就是这一部分，根本原因就是一切升学都是向本科的产出看齐的，唯有在这方面拿出竞争力，才能一锤定音地打破原先的困局。
+            时代内卷特征就是如此，并且未来只会卷的越来越厉害，因此应对之策唯有打不过就加入。
           </p>
           <p>
-            在这一部分，可以预料到的困难除了课题组能否给小课题外，还有学生初次独立承担课题所带来的千万种难题。即使我们能够建立交流团体，提升年级里各个同学的凝聚力，也就是所谓的“科研团体”的凝聚作用，使得他们可以在课题的低谷期互相鼓励等；然而，现实的困难不会改变，精神上的压力仍然是超乎想象的，但却不会有任何人能伸出援手，因此最大的难关还是心理关，我们能做的辅助作用，恐怕还是有限。当然了换个角度，我们必须从全方位关注学生进度，保持及时沟通——是真正执行意义上的及时沟通，而不是很多学生工作找学生谈话干个几次以后就不谈了。做到我们能做到的最好，剩下的熬课题低估，只能交给当事人了。
+            在这一部分，可以预料到的困难除了课题组能否给小课题外，还有学生初次独立承担课题所带来的千万种难题。即使我们能够建立交流团体，提升年级里各个同学的凝聚力，也就是所谓的“科研团体”的凝聚作用，使得他们可以在课题的低谷期互相鼓励等；然而，现实的困难不会改变，精神上的压力仍然是超乎想象的，但却不会有任何人能给决定性的帮助，因此最大的难关还是心理关。在帮助学生克服这些心理关，科研低谷期，我们飞跃计划做到能做到的最好，剩下的熬课题低谷，只能交给当事人了。
           </p>
         </div>
 
@@ -176,16 +199,16 @@
         <button class="center-button" onclick="toggleCollapse('第四步传承阶段')">第四步传承阶段</button> 
         <div class="collapse-container collapsed" id="第四步传承阶段">  
           <p>
-            第四阶段，针对新生的大三秋春学期，该阶段是我们飞跃计划循环的关键节点。在这个阶段，第一个任务是进一步推进上述第三阶段的任务，这是因为第三阶段我们不可能让所有的计划内的学生都能独立承担课题，主观客观因素都会导致部分学生延后承担课题，以及即使是承担课题任务，往往一年的时间也是不够完成的。因此在第四阶段，我们首先是让还未承担任务的学生，仍然是以学生工作辅导的角度，以及跟课题组导师、研究生们沟通的途径，提升课题承担率，除此之外就是让已有课题的同学继续推进任务直至产出。
+            第四阶段，针对新生的大三秋春学期。在这个阶段，第一个任务是进一步推进上述第三阶段的任务，这是因为第三阶段我们不可能让所有的计划内的学生都能独立承担课题，主观客观因素都会导致部分学生延后承担课题，以及即使是承担课题任务，往往一年的时间也是不够完成的。因此在第四阶段，我们首先是让还未承担任务的学生，仍然是以朋辈辅导辅导的角度，以及跟课题组导师、研究生们沟通的途径，提升课题承担率，除此之外就是让已有课题的同学继续推进任务直至产出。
           </p>
           <p>
-            从另一个角度出发，在这个时期学生往往要决定去处，是申请海外名校PhD还是清北华五或四大所的直博，而其中选择留在北师大的深造的，未来作为飞跃计划的参与者，完全有足够的了解可以承担起飞跃计划的管理工作。到最后，我们完全可以组建起跨越多届的管理组，本质上，这也是新时代校友组织的一种体现。
+            在这个时期学生往往要决定去处，是申请海外名校PhD还是清北华五或四大所的直博。对于要往外走的同学，我们开展升学的交流工作，也就是类似于飞跃手册的作用。而其中选择留在北师大的深造的，作为飞跃计划的曾经参与者，完全有足够的了解可以承担起飞跃计划的管理工作，也就是我们考虑飞跃计划的换届问题。几年后，我们完全可以组建起跨越多届的管理组，本质上，这也是新时代校友组织的一种体现。
           </p>
         </div>
 
         <div class="dashed-line"></div>
         <p>
-          相当值得注意的是，除上述的四步走外，飞跃计划需要两个额外的模块正常开展计划。第一个是从学业、生活与职业道路规划的辅导角度，第二个是从学生科研动态考核与计划执行成效追踪的角度。
+          除上述的四步走外，飞跃计划需要两个额外的模块正常开展计划。第一个是从学业、生活与职业道路规划的辅导角度，第二个是从学生科研动态考核与计划执行成效的追踪的角度。当然了这两部分暂时不公开。
         </p>
         <div class="dashed-line"></div>
 
@@ -210,12 +233,56 @@
 
       <hr>
 
+      <button class="center-button" onclick="toggleCollapse('参加飞跃计划')">参加飞跃计划</button> 
+      <div class="collapse-container collapsed" id="参加飞跃计划">  
+        <p style="text-align: center;">
+          参加飞跃计划，你将会获得。
+        </p>  
+        <p>
+          对各课题组的前沿科研工作的通俗理解，与各个课题组导师及研究生面对面交流的机会。如果你对科研有疑惑有兴趣有好奇，但是你却不知道如何开始如何了解，那么不参加我们的宣传讲座，不行动起来，这些知识怎么会主动跑到大脑里呢？迈出第一步，对科研建立基础的观念，找到好奇有兴趣的领域。
+        </p>  
+        <p>
+          参加科研宣传讲座，来年本科生基础科研项目申报时，与各课题组导师进行双向选择的时候，高出勤及良好的考核结果，将会给到对应课题组导师，既利于本科生选择感兴趣的导师，也利于导师选择感兴趣的学生。同时如果你在讲座中期就找到了想去的课题组，提前进组开始学习，甚至开始前期的探索给出前期结果，这对于明年项目申报而言，是一个有力竞争点，同时对于未来更广义的本科生科研，对于未来发期刊申专利等，都是有利的。
+        </p>  
+        <p>
+          找到更多的同路伙伴，奋斗的旅途不再孤单——往后大伙就知道了，孤独是很可怕的事情。毕竟这个大学生本质上成年人嘛，不同的道路选择，不同的人生追求决定了未来我们归属于各个圈子；找到自己的圈子结识伙伴，相当重要。
+        </p>  
+        <p>
+          飞跃计划为强科研性质的计划，加入飞跃计划得到对应的锻炼，这对于日后转入同样强科研的基础学科拔尖人才培养计划2.0(励耘计划)，能力上是有益的事情。当然了我们也鼓励参加科研计划的同学，明年三四月份可以报名励耘计划的转入，因为励耘计划，在这个全公费出国一两个月，包机票包学费包托福考试费还有给生活补助上，力度是相当大的。后续，我们也会建议学院开一些，全公费让大家去参加学术会议比如化学年会、分析化学年会、物化(理论与计算)等年会的项目。其实这个比公费出国便宜，也更方便。
+        </p>  
+        <p>
+          得到高年级师兄师姐的直接学业、生活、科研辅导。
+        </p>  
+        <p>
+          好好学习干活，到时候TOP二作、二区二作，甚至是二区一作、TOP一作，带着文章衣锦还乡。并不是画大饼，而是持续投入+坚持+课题组的引导作用必然带来的Happy End.
+        </p>  
+        <p>
+          <del>只要肯吃苦，就有吃不完的苦。身负科研技能，去哪里都是即插即用的好用牛马。手握顶刊一作。“你，去给我申个国自然回来”。“我？”。</del>
+        </p>  
+        <p>
+          只要肯吃苦，就有光明的前途。身负科研技能，去哪里都是强势的竞争者。手握顶刊一作，清北华五四大所哈耶普斯麻，快快这边请。
+        </p>  
+        <p style="text-align: center;">
+          找不到合适的渠道了解科研？现在机会来了！还在等什么？
+        </p>  
+      </div>  
+
+      <hr>
+
+      <button class="center-button" onclick="toggleCollapse('本科生科研宣传讲座')">本科生科研宣传讲座</button> 
+      <div class="collapse-container collapsed" id="本科生科研宣传讲座">  
+        <p>
+          飞跃计划，第一步就是本科生科研宣传讲座。每周日，晚上六点到八点，化学楼化二教室，期待你的到来。
+        </p>
+      </div>
+
+      <hr>
+
       <button class="center-button" onclick="toggleCollapse('目前进展')">目前进展</button> 
       <div class="collapse-container collapsed" id="目前进展">  
         <p>
           该模块暂不公开。
         </p>  
-
       </div>  
 
       <hr>
@@ -227,7 +294,7 @@
       </div>    
         
       <div id="link-container" style="display: none;">    
-        <p style="text-align: center;">欢迎来到，飞跃计划:</p>    
+        <p style="text-align: center;">欢迎加入，飞跃计划:</p>    
         <!--  好吧，我就知道肯定会有人F12审查代码查看隐藏链接，不过本身主页里也没啥特殊的 -->
         <p style="text-align: center;">  <a href="./飞跃计划主页.html" target="_blank">进入主页</a>   </p>   
       </div>
