--- a/飞跃计划主页.html
+++ b/飞跃计划主页.html
@@ -44,8 +44,14 @@
         line-height: 1.7;
         text-size-adjust: 100%;
       ">
+      <p style="text-align: center;">
+        欢迎加入，飞跃计划！
+      </p>
+      
+      <hr>
+
       <p>  
-        2024年10月1日。网站主页版本 <span class="version">V0.0.1</span>  
+        2024年10月4日。网站主页版本 <span class="version">V0.0.2</span>  
       </p>
       <p>
         大家好，这里是BNU化学学院<author>飞跃计划小组</author>组长——好吧现在只有我一个人......不过没关系，千里之行始于足下，合抱之木生于毫末。
@@ -110,7 +116,7 @@
         </p>
 
         <p>
-          对于第三个目标，建立危机意识，这需要学院和课题组的Push，当然了一般学院和课题组教授们不会对本科生Push，并且本科生也有学业压力，因此这部分危机意识的建立，也就是意识到真正的竞争形势，恐怕担子落到了互帮互助的圈子信息分享，是以学生工作为主的。从互帮互助的培养与交流制度上，比如交流学业绩点刷分，参加各种项目刷加分，或者是早日准备出国的策略，这部分也是学生工作为主。
+          对于第三个目标，建立危机意识，这需要学院和课题组的Push，当然了一般学院和课题组教授们不会对本科生Push，并且本科生也有学业压力，因此这部分危机意识的建立，也就是意识到真正的竞争形势，恐怕担子落到了互帮互助的圈子信息分享。从互帮互助的培养与交流制度上，比如交流学业绩点刷分，参加各种项目刷加分，或者是早日准备出国的策略，这部分也是自行交流为主。
         </p>
       </div>  
 
@@ -148,7 +154,7 @@
           </p>
 
           <p>
-            然后，我们这里要引入追踪机制与辅导机制。通过定期，一周一次收集学生的讲座考核，我们可以查看学生的具体情况，也就是起到一个追踪阶段，我们毫无疑问可以挑选出其中犹豫不决但有明显意愿的学生，进行交流讨论。通过这种学生工作、朋辈辅导的方式，我们实现推动促进的引导作用。
+            然后，我们这里要引入追踪机制与辅导机制。通过定期，一周一次收集学生的讲座考核，我们可以查看学生的具体情况，也就是起到一个追踪阶段，我们毫无疑问可以挑选出其中犹豫不决但有明显意愿的学生，进行交流讨论。通过这种朋辈辅导的方式，我们实现推动促进的引导作用。
           </p>
 
           <p>
@@ -167,10 +173,10 @@
             该阶段是我们飞跃计划质变的关键节点。这是因为，以往的本科生科研，存在相当多的名存实亡的挂名，或者说本质上就是断联的情况。实际上能真正维持高投入的本科生，比率不会超过10%。然而，飞跃计划的目的当然是培养国内外深造的人才，也就是说我们必须是做到真正的本科生科研，而不是时而打卡时而断连的状态。
           </p>
           <p>
-            从原因上分析，过往本科生科研低维持率的原因，毫无疑问本科学业压力是一个，另外一个原因源于惰性与缺乏动力。本科的学业压力在后续部分会给出解决办法。在惰性和缺乏动力上，我们仍然通过学生工作和朋辈辅导的形式解决。道理很简单，通过组建聚集力强的交流团体，这是从内部凝聚共识与驱动力的办法，开展辅导工作，这是从外部提升关注度与认可度以及鼓励的驱动法。这部分工作，需要我们召集足够的辅导工作者，也刚需足够的“已经在课题组”的学生。对于前者，这是我们不得不面对的飞跃计划成员征集问题，对于后者，这依赖于上述第一阶段的阶段性成果带来足够高的本科生进组率。
+            从原因上分析，过往本科生科研低维持率的原因，毫无疑问本科学业压力是一个，另外一个原因源于惰性与缺乏动力。本科的学业压力在后续部分会给出解决办法。在惰性和缺乏动力上，我们仍然通过朋辈辅导的形式解决。道理很简单，通过组建聚集力强的交流团体，这是从内部凝聚共识与驱动力的办法，开展辅导工作，这是从外部提升关注度与认可度以及鼓励的驱动法。这部分工作，需要我们召集足够的辅导工作者，也刚需足够的“已经在课题组”的学生。对于前者，这是我们不得不面对的飞跃计划成员征集问题，对于后者，这依赖于上述第一阶段的阶段性成果带来足够高的本科生进组率。
           </p>
           <p>
-            除了上述的学生工作方面，这一阶段离不开课题组的老师们以及研究生们的投入。并不是所有的研究生都愿意手把手带起本科生，尤其是在过往的历史，也就是大部分本科生都只是在实验室刷个脸以后就不出现的事实上，要改变“本科生无用”的认知，需要一定时间，即使改变了，让有毕业压力的研究生们额外花时间，赌“带出来的本科生未来将会帮大忙”，恐怕也确实是有一些赌的性质。然而我们确实无法保证进入这一阶段，缺人带的本科生，未来100%的概率不会突然刷脸完就消失。因此，这部分我们该如何与各个课题组负责带本科生的研究生进行沟通，在日后是一个工作重点。
+            除了上述的方面，这一阶段离不开课题组的老师们以及研究生们的投入。并不是所有的研究生都愿意手把手带起本科生，尤其是在过往的历史，也就是大部分本科生都只是在实验室刷个脸以后就不出现的事实上，要改变“本科生无用”的认知，需要一定时间，即使改变了，让有毕业压力的研究生们额外花时间，赌“带出来的本科生未来将会帮大忙”，恐怕也确实是有一些赌的性质。然而我们确实无法保证进入这一阶段，缺人带的本科生，未来100%的概率不会突然刷脸完就消失。因此，这部分我们该如何与各个课题组负责带本科生的研究生进行沟通，在日后是一个工作重点。
           </p>
           <p>
             结合上述的各项工作，我们的第二阶段的工作目标就是将超过50%的原“找到初步方向与课题组”的同学，转化为“完全具备实验能力”的学生。按照以往同时期，申报本基项目的学生转化为实际真正干活的学生的比率，这个比率不会超过10%。如果说我们能至少做到50%，就可以说是成功的。
@@ -191,7 +197,7 @@
             当然了时代特征就是如此，并且未来只会卷的越来越厉害，因此应对之策唯有打不过就加入。我们认为飞跃计划的产出就是这一部分，根本原因就是一切升学都是向本科的产出看齐的，唯有在这方面拿出竞争力，才能一锤定音地打破原先的困局。
           </p>
           <p>
-            在这一部分，可以预料到的困难除了课题组能否给小课题外，还有学生初次独立承担课题所带来的千万种难题。即使我们能够建立交流团体，提升年级里各个同学的凝聚力，也就是所谓的“科研团体”的凝聚作用，使得他们可以在课题的低谷期互相鼓励等；然而，现实的困难不会改变，精神上的压力仍然是超乎想象的，但却不会有任何人能伸出援手，因此最大的难关还是心理关，我们能做的辅助作用，恐怕还是有限。当然了换个角度，我们必须从全方位关注学生进度，保持及时沟通——是真正执行意义上的及时沟通，而不是很多学生工作找学生谈话干个几次以后就不谈了。做到我们能做到的最好，剩下的熬课题低估，只能交给当事人了。
+            在这一部分，可以预料到的困难除了课题组能否给小课题外，还有学生初次独立承担课题所带来的千万种难题。即使我们能够建立交流团体，提升年级里各个同学的凝聚力，也就是所谓的“科研团体”的凝聚作用，使得他们可以在课题的低谷期互相鼓励等；然而，现实的困难不会改变，精神上的压力仍然是超乎想象的，但却不会有任何人能伸出援手，因此最大的难关还是心理关，我们能做的辅助作用，恐怕还是有限。当然了换个角度，我们必须从全方位关注学生进度，保持及时沟通——是真正执行意义上的及时沟通，而不是很多找学生谈话干个几次以后就不谈了。做到我们能做到的最好，剩下的熬课题低估，只能交给当事人了。
           </p>
           <p>
             我们的第三阶段的工作目标就是将超过50%的原“完全具备实验能力”的学生，转化为“承担主要课题工作”的学生。按照以往同时期，这个时期可以说是几近0%的学生独立承担课题。即使是按照大三结束这个时期，年级里也仅有4%的学生，是独立承担课题的，这个从每年的学术奖学金二等和三等仅有两三人是可以看出来的。因此，如果我们的工作能够做到至少50%的转化率，或者这里按照年级总人数来个比率，年级总12.5%，在这个大二末期的时期，我认为我们的工作就是成功的。
@@ -203,10 +209,10 @@
         <button class="center-button" onclick="toggleCollapse('第四步传承阶段')">第四步传承阶段</button> 
         <div class="collapse-container collapsed" id="第四步传承阶段">  
           <p>
-            第四阶段，针对新生的大三秋春学期，该阶段是我们飞跃计划循环的关键节点。在这个阶段，第一个任务是进一步推进上述第三阶段的任务，这是因为第三阶段我们不可能让所有的计划内的学生都能独立承担课题，主观客观因素都会导致部分学生延后承担课题，以及即使是承担课题任务，往往一年的时间也是不够完成的。因此在第四阶段，我们首先是让还未承担任务的学生，仍然是以学生工作辅导的角度，以及跟课题组导师、研究生们沟通的途径，提升课题承担率，除此之外就是让已有课题的同学继续推进任务直至产出。
+            第四阶段，针对新生的大三秋春学期，该阶段是我们飞跃计划循环的关键节点。在这个阶段，第一个任务是进一步推进上述第三阶段的任务，这是因为第三阶段我们不可能让所有的计划内的学生都能独立承担课题，主观客观因素都会导致部分学生延后承担课题，以及即使是承担课题任务，往往一年的时间也是不够完成的。因此在第四阶段，我们首先是让还未承担任务的学生，仍然是以朋辈辅导的角度，以及跟课题组导师、研究生们沟通的途径，提升课题承担率，除此之外就是让已有课题的同学继续推进任务直至产出。
           </p>
           <p>
-            这一阶段的第二个任务是建立循环机制；上述我们提到飞跃计划命名的理由的第三点，是包括了前人帮扶后人的。在这个阶段已经完成了课题并投稿期刊的同学们，如果有意愿帮助往后的大一新生，那么毫无疑问，欢迎加入飞跃计划管理组。事实上，我们的计划要做到成功，必然是一代传一代的，然而，该项计划如果是以学院教师来主要负责，就面临学生工作难以开展、对学生压力不够了解、辅导作用不够大的问题，同时也恐怕会面临一些避嫌问题，比如作为计划负责人，往自己的课题组倾斜关注是否一种不道德的行为？教师的立场地位本身比学生高，那么是否会被怀疑用立场干涉学生的科研方向选择？无论负责教师本身怎么想如何做，外界的质疑不会改变，这是极其棘手的问题。因此飞跃计划的传承只能一代传一代，这要求必须有负责有能力的接班人接手。一届不作为的社团管理层就足够让一个社团陷入低谷，而我们飞跃计划并不是娱乐性质的，恰恰相反，我们是给到学生很大的压力的，因为毋庸置疑的是按照上述的流程下来，本科生涯不会有太多的娱乐事件，从这个角度出发，一届不作为的管理组，带来的不止是低谷这么简单，恐怕会直接导致先前无数的努力付诸东流。
+            这一阶段的第二个任务是建立循环机制；上述我们提到飞跃计划命名的理由的第三点，是包括了前人帮扶后人的。在这个阶段已经完成了课题并投稿期刊的同学们，如果有意愿帮助往后的大一新生，那么毫无疑问，欢迎加入飞跃计划管理组。事实上，我们的计划要做到成功，必然是一代传一代的，然而，该项计划如果是以学院教师来主要负责，就面临具体辅导工作难以开展、对学生压力不够了解、辅导作用不够大的问题，同时也恐怕会面临一些避嫌问题，比如作为计划负责人，往自己的课题组倾斜关注是否一种不道德的行为？教师的立场地位本身比学生高，那么是否会被怀疑用立场干涉学生的科研方向选择？无论负责教师本身怎么想如何做，外界的质疑不会改变，这是极其棘手的问题。因此飞跃计划的传承只能一代传一代，这要求必须有负责有能力的接班人接手。一届不作为的社团管理层就足够让一个社团陷入低谷，而我们飞跃计划并不是娱乐性质的，恰恰相反，我们是给到学生很大的压力的，因为毋庸置疑的是按照上述的流程下来，本科生涯不会有太多的娱乐事件，从这个角度出发，一届不作为的管理组，带来的不止是低谷这么简单，恐怕会直接导致先前无数的努力付诸东流。
           </p>
           <p>
             从另一个角度出发，在这个时期学生往往要决定去处，是申请海外名校PhD还是清北华五或四大所的直博，而其中选择留在北师大的深造的，未来作为飞跃计划的参与者，完全有足够的了解可以承担起飞跃计划的管理工作。到最后，我们完全可以组建起跨越多届的管理组，本质上，这也是新时代校友组织的一种体现。
@@ -225,13 +231,13 @@
         <button class="center-button" onclick="toggleCollapse('辅助模块')">辅助模块</button> 
         <div class="collapse-container collapsed" id="辅助模块">  
           <p>
-            辅助模块，旨在以朋辈辅导、学生工作的方式，对学生的学业、生活、职业规划等方面进行辅导。这个模块是十分有必要的，理由如下。
+            辅助模块，旨在以朋辈辅导的方式，对学生的学业、生活、职业规划等方面进行辅导。这个模块是十分有必要的，理由如下。
           </p>
           <p>
             教务的成绩正态分布要求永远存在，学生的绩点压力永远存在，即使有好的科研成绩，绩点的压力也不会消失。如果学生的绩点并不高，例如在3.6以下，那么这在申请海外PhD上，毫无疑问占到了很大的劣势，而在申请清北夏令营的时候，也是一样的劣势。但是在绩点正态分布的要求下，想要拿到高的绩点必定意味着要花时间刷题，以及四处搜集往年考题。当然了，不是说这就不重要，只是科研的压力，要做出成果来，付出的代价是相当大的，本来时间就不够，还要卷绩点，那就更加压力大了。此外，其实相当一部分的学生能够搜集到往年考试题，而考试题又每年不怎么变化，这就导致了不擅社交的，没有到处“巴结”师兄师姐的这部分学生，在考试上占尽劣势。很多时候，复习一周，就是比不上做两套往年题。毫无疑问，我们绝不能让这部分投入科研的学生，居然在这个方面占到劣势。从我们朋辈辅导的角度，我们选择给什么样的帮助，给多大的帮助，都是符合情理的，因此我们可以对参与度高的新生提供必要的学业帮助。
           </p>
           <p>
-            生活上的适应问题，一个学期过去，对于新生而言不成问题，大部分情况是这样的。然而，我们都知道相当多的宿舍的作息极其不规律，熬夜开黑打游戏一两点等，这对于对规律作息有需求的同学而言，是毁灭性的打击。而本科生如果要投入科研，那么注定的各方面压力都会较大，规律作息是十分有必要的。除此之外，还有关于社交生活上的问题。我们必须承认的是，选择高投入科研的道路的同学，本科的社交生活，从社交娱乐上，就是相当灰白的。当别人每个周末都会跟对象出游，而我们却在实验室或在机房想着复现实验；当别人每个节假日都会跟对象旅行，而我们却又在实验室在机房想着改进条件；当别人寒暑假早早回家，而我们仍在实验室在机房想着机理理论；当别人每周都有大把的时间参加社团活动，琴棋书画样样耍的明白，而我们却仅有烧瓶和代码。长久以来，大部分的学生的心态，恐怕会产生不可逆的微小变化，或者说，逼近某个临界值。因此，同级之间还是从团体凝聚力的角度进行辅助，跨年级的辅助就以学生工作和朋辈辅导的角度进行辅助。这就好比大学主流的大群，包含了超过八成的快乐大学生，而选择高投入科研的同学，大部分是处在大群之外的游离体，孤立的个体对于突发与风险的承担能力有限，然而我们凝聚成小团体，即使这并不是主群，也仍然是完全意义的避风港。
+            生活上的适应问题，一个学期过去，对于新生而言不成问题，大部分情况是这样的。然而，我们都知道相当多的宿舍的作息极其不规律，熬夜开黑打游戏一两点等，这对于对规律作息有需求的同学而言，是毁灭性的打击。而本科生如果要投入科研，那么注定的各方面压力都会较大，规律作息是十分有必要的。除此之外，还有关于社交生活上的问题。我们必须承认的是，选择高投入科研的道路的同学，本科的社交生活，从社交娱乐上，就是相当灰白的。当别人每个周末都会跟对象出游，而我们却在实验室或在机房想着复现实验；当别人每个节假日都会跟对象旅行，而我们却又在实验室在机房想着改进条件；当别人寒暑假早早回家，而我们仍在实验室在机房想着机理理论；当别人每周都有大把的时间参加社团活动，琴棋书画样样耍的明白，而我们却仅有烧瓶和代码。长久以来，大部分的学生的心态，恐怕会产生不可逆的微小变化，或者说，逼近某个临界值。因此，同级之间还是从团体凝聚力的角度进行辅助，跨年级的辅助就以朋辈辅导的角度进行辅助。这就好比大学主流的大群，包含了超过八成的快乐大学生，而选择高投入科研的同学，大部分是处在大群之外的游离体，孤立的个体对于突发与风险的承担能力有限，然而我们凝聚成小团体，即使这并不是主群，也仍然是完全意义的避风港。
           </p>
           <p>
             此外，还有职业规划，或者说近一些的深造规划，这也是离不开同伴之间的信息交流的。各个PhD的申请攻略，托福雅思GRE的备考，或者是英国日本新加坡等学校的入学考试等，这些信息一是源于互联网搜集，二就是代代相传，或者是询问曾成功的师兄师姐，或者是找到相关的人脉联系攻略。而从深造选择哪个方向，选择哪个大学，选择哪个课题组这些具体问题上，这部分也是全都只能依靠同伴交流开展的。
