微小调整修改index

--- a/index.html
+++ b/index.html
@@ -174,6 +174,9 @@
           <p>
             第二阶段，针对新生的大一春季学期，在这个阶段，刚来到课题组的学生，往往不具备实验技能，然而实验技能并不是吃天赋的东西，不会出现学不会的情况。因此在本学期，通过课题组的引导员，往往是研究生师兄师姐担任这个角色，可以逐渐锻炼本科生的实验技能。这个过程，毫无疑问也要进行理论学习。并且根据相关课题的专业性，从对应的书籍进行理论知识的补充，这其实是更有利的，而不是把所有方向的书都精读，这显然不现实，时间上来不及。
           </p>
+          <p>
+            我们非常提倡本科生在这个时期，或者更早地如果大一上就已经找到了心仪的课题组，那么应该尽早多与课题组内的师兄师姐联系沟通，最大化利用时间迅速补充对应领域的理论知识。同时，如果是对于强实验性质的课题，比如有机合成，那么应该尽早虚心请教师兄师姐，观看模仿操作并且学会自己操作；如果是对于强理论性质的课题，那么应该尽早学会计算机的各自使用；同时对于数据分析、文献查找等技能，也应该尽早开始学习；最后，不要忘记保持英语学习，以备不时之需。
+          </p>
         </div>
 
         <div class="dashed-line"></div>
